@@ -1,3 +1,9 @@
+2005-10-23 21:29 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridedger.c (gridedgerLengthToS) started routine (blank,
+	except for comments) that will give next s value for certain
+	length edge.
+
 2005-10-20 11:48 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridedger.c (gridedgerSegmentMap) map linearly interpolated
